--- a/wp-content/plugins/qi-addons-for-elementor/inc/admin/inc/shortcodes/translators/elementor/assets/css/elementor.css
+++ b/wp-content/plugins/qi-addons-for-elementor/inc/admin/inc/shortcodes/translators/elementor/assets/css/elementor.css
@@ -2,6 +2,7 @@
 	width: 32px;
 	height: 32px;
 	display: inline-block;
+	background-size: 32px 32px;
 }
 .qodef-elementor-admin-widget-help {
 	margin-top: -3px;
